[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "image_builder"
]


[dependencies]
bootloader = "0.10.12"
volatile = "0.4.5"
noto-sans-mono-bitmap = { version = "0.1.5", default-features = false, features = ["regular", "size_14"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.14.10"
spin = "0.9.4"