[package]
name = "image_builder"
version = "0.1.0"
edition = "2021"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "w568w <cloudkitty@qq.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
locate-cargo-manifest = "0.2.0" # for locating the kernel's `Cargo.toml`